--- a/StRoot/StEvent/doc/tex/StEvent.tex
+++ b/StRoot/StEvent/doc/tex/StEvent.tex
@@ -2,7 +2,7 @@
 %
 % StEvent - User Guide and Reference Manual -- LaTeX Source
 %
-% $Id: StEvent.tex,v 2.42 2000/07/13 12:47:07 ullrich Exp $
+% $Id: StEvent.tex,v 2.44 2000/08/17 00:36:31 ullrich Exp $
 %
 % Author: Thomas Ullrich, Nov 1999
 %
@@ -21,8 +21,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 % $Log: StEvent.tex,v $
-% Revision 2.42  2000/07/13 12:47:07  ullrich
-% Added ZDC info provided by Clemens
+% Revision 2.44  2000/08/17 00:36:31  ullrich
+% Added description of StTptTrack.
+%
+% Revision 2.48  2000/10/13 19:21:02  ullrich
+% Added new chapter on how to wrire miniDSTs using StEvent.
 %
 % Revision 2.47  2000/09/28 10:58:43  ullrich
 % Added ref section for new RICH classes.
@@ -190,11 +193,11 @@
     {\parbox[t]{\labelwidth}{\hspace{0pt}\textbf{{#1}}}}}}
 \newenvironment{Entry}%
 {\renewcommand{\entrylabel}{\Entrylabel}\begin{entry}}%
-  {\LARGE $ $Revision: 2.42 $ $}  \\[5mm] % replaced by cvs with current revision
-  {\LARGE $ $Date: 2000/07/13 12:47:07 $ $}  % replaced by cvs with current revision
+  {\end{entry}}
+
 \begin{document}
-  {\LARGE $ $Revision: 2.42 $ $}  \\[5mm] % replaced by cvs with current revision
-  {\LARGE $ $Date: 2000/07/13 12:47:07 $ $}  % replaced by cvs with current revision
+  {\LARGE $ $Revision: 2.44 $ $}  \\[5mm] % replaced by cvs with current revision
+  {\LARGE $ $Date: 2000/08/17 00:36:31 $ $}  % replaced by cvs with current revision
 %
 %    Title page
 %
@@ -209,8 +212,8 @@
   \mbox{\includegraphics[width=\textwidth]{StEventTitle.eps}}
   \hfill\mbox{}\\[3cm]
   {\LARGE User Guide and Reference Manual \\[5mm] for Version 2}\\[2cm]
-  {\LARGE $ $Revision: 2.42 $ $}  \\[5mm] % replaced by cvs with current revision
-  {\LARGE $ $Date: 2000/07/13 12:47:07 $ $}  % replaced by cvs with current revision
+  {\LARGE $ $Revision: 2.44 $ $}  \\[5mm] % replaced by cvs with current revision
+  {\LARGE $ $Date: 2000/08/17 00:36:31 $ $}  % replaced by cvs with current revision
   \vfill
 \end{center}
 \cleardoublepage
@@ -316,7 +319,7 @@ code more readable. All enumerations used in \StEvent\ are defined in
 \texttt{StEnumerations.h}.  For users convenience some non-\StEvent\
 header files as \texttt{StDetectorId.h}, \texttt{StVertexId.h} and
 \texttt{StTrackMethod.h} are also included therein.
-enum StTrackType            {global, primary, secondary};
+\begin{figure}[htb]
     \begin{center}
         \includegraphics[width=0.45\textheight]{cartoon2.eps}
         \caption{Strong typing avoids mixing abstractions.}
@@ -757,7 +760,10 @@ this is your concern.
 \texttt{StEventMaker}.  This maker reads DST tables stored in memory
 and does all the things to make \StEvent\ nice and useful. How the DST
 gets into memory is another story and is explained in the next section
-    \verb+Bool_t  doPrintRunInfo;+\\
+(\ref{sec:doEvents}).  In principle all you have to do is to make sure
+that \texttt{StEventMaker} is in the chain and called at the right
+place and at the right time.  The only public data member and the two
+methods you should be aware of are:
 \begin{Entry}
     
 \item[Public Data\\ Member]
@@ -1490,6 +1496,20 @@ them by value or by pointer. There are:
     not specified. All we know is that we get an object which tells us
     something about the identity of the track.  \texttt{StPidTraits}
     is an abstract class. The concrete classes are
+    \texttt{StDedxPidTraits}, \texttt{StRichPidTraits}, and
+    \texttt{StTofPidTraits}. The latter two are not implemented yet.
+    This part is a bit complicated and that's why it got its own
+    section (see \ref{sec:pidTraits} below).
+    
+\item[StTrackTopologyMap] \index{StTrackTopologyMap} The STAR
+    detectors produces all together almost a million hits. In order to
+    keep the DST size at a moderate level all cannot get stored,
+    probably none on the long term. There are however many reasons to
+    keep a minimum level of information about the hits used to fit the
+    tracks. This minimum level is contained in
+    \texttt{StTrackTopologyMap}. For more check out the reference
+    manual.
+    
 \end{description}
 
 \subsubsection{TPT Tracks}
@@ -3350,7 +3370,10 @@ definition in the header file.
 \subsection{StGlobalTrack}
 \index{StGlobalTrack|textbf}
 \label{sec:StGlobalTrack}
+\begin{Entry}
+\item[Summary]
 \item[Synopsis]
+    \verb+#include "StGlobalTrack.h"+\\
     \verb+class StGlobalTrack;+\\
 \item[Description]
 \item[Related Classes] \texttt{StGlobalTrack} is derived from
@@ -3428,6 +3451,10 @@ definition in the header file.
     \verb+class StHit;+\\
 \item[Description]
     
+\item[Related Classes]
+    \texttt{StHit} is derived form
+    \texttt{StMeasuredPoint}. \texttt{StTpcHit}, \texttt{StSvtHit},
+    \texttt{StSsdHit}, \texttt{StRichHit}, \texttt{StFtpcHit}, and
     \texttt{StEmcPoint} inherit from this class.
         
 \item[Public\\ Constructors]
@@ -3744,7 +3771,10 @@ definition in the header file.
 
 \subsection{StPrimaryTrack}
 \index{StPrimaryTrack|textbf}
+\label{sec:StPrimaryTrack}
+\begin{Entry}
 \item[Summary]
+\item[Synopsis]
     \verb+#include "StPrimaryTrack.h"+\\
     \verb+class StPrimaryTrack;+\\
 \item[Description]
@@ -4915,6 +4945,34 @@ definition in the header file.
     \verb+Float_t chrg_tpc_in[24];+\\
     Total charge deposition in inner TPC sectors.
     
+    \verb+Float_t chrg_tpc_out[24];+\\
+    Total charge deposition in outer TPC sectors.
+    
+    \verb+Float_t hit_frac_tpc[2];+\\
+    Fraction of hits used in TPC, tan(dip angle) $< 0$ $(\ge 0)$.
+    
+    \verb+Float_t avg_trkL_tpc[2];+\\
+    Average track length (cm) \\ or average number of assigned,
+    tan(dip angle) $< 0$ $(\ge 0)$.
+    
+    \verb+Float_t res_drf_tpc[2];+\\
+    Average residuals, drift direction, \\ or average chisq(2) of fit,
+    tan(dip angle) $< 0$ $(\ge 0)$.
+\end{Entry}
+\clearpage
+
+\subsection{StTptTrack}
+\index{StTptTrack|textbf}
+\label{sec:StTptTrack}
+\begin{Entry}
+\item[Summary]
+\item[Synopsis] TPC tracks as generated by the ``tpt'' tracker.
+    \verb+#include "StTptTrack.h"+\\
+    \verb+class StTptTrack;+\\
+\item[Description] \texttt{StTptTrack} is created using the original
+     tracks generated in the \texttt{tpt} tracker. This is a pure TPC track.
+     Use for debugging purposes only.
+
 \item[Related Classes] \texttt{StTptTrack} is derived from
     \texttt{StTrack}. See there for more info.
     
@@ -5574,15 +5632,12 @@ numberOfPoints(kTpcId) == numberOfPoints(kFtpcWestId)
 
     \verb+UInt_t numberOfZdcWords() const;+\\
     Currently, and probably for the rest of its lifetime, this method
-        \item adc[7] = zdcEast1;     
-        \item adc[7] = zdcEast1;     
-        \item adc[6] = zdcEast2;     
-        \item adc[5] = zdcEast3;     
-        \item adc[4] = zdcEastSum;   
-        \item adc[3] = zdcWest1;     
-        \item adc[2] = zdcWest2;     
-        \item adc[1] = zdcWest3;     
-        \item adc[0] = zdcWestSum;   
+    will return 16.
+    
+    \verb+Float_t adc(UInt_t) const;+\\
+    The meaning of the various words is as follows:
+    \begin{itemize}
+    \item unattenuated signals (mostly useful for looking at the single neutron peak)
         \begin{description}
         \item adc[7] = zdcEast1;
         \item adc[7] = zdcEast1;    
